# mc-tui

./: .gitignore  Cargo.toml  README.md
resources/: block_data.json  entity_data.json
src/: buffered_reader.rs  log.rs  main.rs  nbt.rs  net.rs  packets.rs  util.rs  world.rs
src/game/: entity.rs  entity_manager.rs  mod.rs  player.rs
src/ui/: bar.rs  entity_overlay.rs  mod.rs  world.rs
